[gd_scene load_steps=26 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://uipack_fixed/PNG/blue_button02.png" type="Texture" id=2]
[ext_resource path="res://kenney_fontpackage/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://kenney_fontpackage/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Idle_4.png" type="Texture" id=5]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/2.png" type="Texture" id=6]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/1.png" type="Texture" id=7]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/4.png" type="Texture" id=8]
[ext_resource path="res://Sounds/2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="AudioStream" id=9]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/3.png" type="Texture" id=10]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Idle_4.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_top = 111.0
margin_right = 108.0
margin_bottom = 179.0

[node name="StartButton" type="Button" parent="HBoxContainer"]
margin_right = 108.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../OptionButton")
flat = true

[node name="ButtonSkin" type="Sprite" parent="HBoxContainer/StartButton"]
position = Vector2( 55, 10 )
scale = Vector2( 0.568421, 0.448979 )
z_index = -1
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/StartButton"]
margin_left = 27.0
margin_top = -4.0
margin_right = 81.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1

[node name="OptionButton" type="Button" parent="HBoxContainer"]
margin_top = 24.0
margin_right = 108.0
margin_bottom = 44.0
focus_neighbour_bottom = NodePath("../StartButton")
flat = true

[node name="ButtonSkin" type="Sprite" parent="HBoxContainer/OptionButton"]
position = Vector2( 55, 10 )
rotation = -0.00112901
scale = Vector2( 0.568421, 0.448979 )
z_index = -1
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="HBoxContainer/OptionButton"]
margin_top = -4.0
margin_right = 108.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="QuitButton2" type="Button" parent="HBoxContainer"]
margin_top = 48.0
margin_right = 108.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
flat = true

[node name="ButtonSkin" type="Sprite" parent="HBoxContainer/QuitButton2"]
position = Vector2( 55, 10 )
rotation = -0.00112901
scale = Vector2( 0.568421, 0.448979 )
z_index = -1
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="HBoxContainer/QuitButton2"]
margin_left = 27.0
margin_top = -4.0
margin_right = 87.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1

[node name="Title" type="Label" parent="."]
margin_left = 54.0
margin_right = 279.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.180392, 0.141176, 0.141176, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "QUestor"
align = 1

[node name="OwletGuy" type="AnimatedSprite" parent="."]
position = Vector2( 234, 99 )
scale = Vector2( 2.25, 2.25 )
frames = SubResource( 16 )
frame = 3
playing = true

[node name="ColorRect" type="ColorRect" parent="OwletGuy"]
margin_left = -6.0
margin_top = 16.0
margin_right = -3.0
margin_bottom = 17.0
color = Color( 0.164706, 0.188235, 0.305882, 1 )

[node name="ColorRect2" type="ColorRect" parent="OwletGuy"]
margin_left = 0.222221
margin_top = 16.0
margin_right = 3.22222
margin_bottom = 17.0
color = Color( 0.164706, 0.188235, 0.305882, 1 )

[node name="DudeMonster" type="AnimatedSprite" parent="."]
position = Vector2( 234.25, 99 )
scale = Vector2( 2.26563, 2.25 )
frames = SubResource( 10 )
frame = 3
playing = true

[node name="ColorRect" type="ColorRect" parent="DudeMonster"]
margin_left = -6.23378
margin_top = 16.4211
margin_right = -3.23378
margin_bottom = 17.4211
color = Color( 0.0156863, 0.0980392, 0.247059, 1 )

[node name="ColorRect2" type="ColorRect" parent="DudeMonster"]
margin_left = -1.52588e-05
margin_top = 16.4211
margin_right = 2.99998
margin_bottom = 17.4211
color = Color( 0.0156863, 0.0980392, 0.247059, 1 )

[node name="CreditsButton" type="Button" parent="."]
margin_left = 249.0
margin_top = 159.0
margin_right = 311.0
margin_bottom = 179.0
focus_neighbour_bottom = NodePath("../HBoxContainer/StartButton")
custom_styles/focus = SubResource( 11 )
flat = true

[node name="ButtonSkin" type="Sprite" parent="CreditsButton"]
position = Vector2( 31.291, 10.001 )
rotation = -0.00112901
scale = Vector2( 0.303506, 0.285196 )
z_index = -1
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CreditsButton"]
margin_left = 3.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 15.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "credits"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.137
autoplay = true

[node name="ParalaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer"]
position = Vector2( 162, 90 )
scale = Vector2( 0.5625, 0.555556 )
texture = ExtResource( 7 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer2"]
position = Vector2( 162, 90 )
scale = Vector2( 0.5625, 0.555556 )
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer3"]
position = Vector2( 158, 90 )
scale = Vector2( 0.5625, 0.555556 )
texture = ExtResource( 10 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer4"]
position = Vector2( 162, 90 )
scale = Vector2( 0.554687, 0.555556 )
texture = ExtResource( 8 )

[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton2" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_QuitButton2_pressed"]
